plang/testing/logs/false-incorrect/145/program145.p.p
mJ Dbzz D8.
wr Jzb (uUPBW (J7GCM) RU AOpR (iylpy (KUo2J) nzjw)) J.
n (TKqT) (Yd2n) UHe.
abQ (Ai3) sCLDZ vxL OUnf.

egP6j CVGSB LjY4 (UF) :- a (KjC).
hV2f (COfur) (O) ck (z0KJ (y (o dQ) (q) z gxj3l) U).

xoxd (q7 (Cr4H)).


rc (pgZiL (rOJ01 (QPHH) (KfRVI) (V3Z1k))) Mg (XIzC) :- (kQnW k9 QO (X) (KCy); mr (tnGZJ) ob9pA (JYg) no90; ajAKC; u8D Hc WBw c (wOgf T Tdr)), ysLtg, (tTp Ve f; iBo (MM) (DYaH) AqUsJ); (bLA6, hbjON pg wV iP j, (of e), (q), s (yQ (pX) (Xks0f) (MpxOC)); b U fXAN (jp6 ktb4)).
? i rOU hdpR (RcVgY) (o9 (Ch) (nb (cn fXw2R (XV9)) Ez) l5); pGoy0; e Rca C1X; kao (qFcG) (cF MhrY), v Cg3 (qBP6p (Pl5Qd) MS3 Q (Qz)) (p (QsZV6) lJ a), (q2 FzwrH Xh FKB8m); (((m Jne M3e cYLQ (wud Q8 (f A))))), y; og (iN i U) LIpsg.

